--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <link rel="stylesheet" href="CSS/style.css">
     <title>BMI</title>
 </head>
+<body>
+    <h2>BMI calculator</h2>
+    <form>
+<div class="BMI">
+    <label for="weight">Weight(kg): </label><input type="number" id="weight">
+    <label for="height">Height(m): </label><input type="number" id="height">
+    <button type="button" onclick="calculateBMI()">Calculate your BMI</button>
 
+    <p id="bmi"></p>
+	<p id="category"></p>
+
+</div>
+</form>   
 </body>
 <script src="script/code.js"></script>
 </html>
